agregar adm gender age answers al app module

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>paradigAdmin</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
